--- a/src/components/stable/gux-modal/example.html
+++ b/src/components/stable/gux-modal/example.html
@@ -78,7 +78,7 @@
 
         document.getElementById("modal-container").appendChild(html);
     })()'
-    >Dynamic</gux-button
+    >Dynamic (Default)</gux-button
   >
 
   <gux-button
