--- a/src/components/stable/gux-form-field/example.html
+++ b/src/components/stable/gux-form-field/example.html
@@ -107,6 +107,33 @@
     </gux-form-field>
   </div>
 
+  <h1>Number</h1>
+  <gux-form-field>
+    <input
+      slot="input"
+      name="number"
+      type="number"
+      step="5"
+      min="5"
+      max="100"
+      placeholder="Enter a number"
+    />
+    <label slot="label">Number</label>
+  </gux-form-field>
+
+  <gux-form-field clearable>
+    <input
+      slot="input"
+      name="number-clearable"
+      type="number"
+      step="5"
+      min="5"
+      max="100"
+      placeholder="Enter a number"
+    />
+    <label slot="label">Number</label>
+  </gux-form-field>
+
   <h1>Text Like</h1>
 
   <div>
@@ -118,16 +145,6 @@
         placeholder="joe.bloggs@example.com"
       />
       <label slot="label">Email</label>
-    </gux-form-field>
-
-    <gux-form-field>
-      <input
-        slot="input"
-        name="number"
-        type="number"
-        placeholder="Enter a number"
-      />
-      <label slot="label">Number</label>
     </gux-form-field>
 
     <gux-form-field>
@@ -167,16 +184,6 @@
         placeholder="joe.bloggs@example.com"
       />
       <label slot="label">Email</label>
-    </gux-form-field>
-
-    <gux-form-field clearable>
-      <input
-        slot="input"
-        name="number-clearable"
-        type="number"
-        placeholder="Enter a number"
-      />
-      <label slot="label">Number</label>
     </gux-form-field>
 
     <gux-form-field clearable>
