fix(gux-text-label): removed use of legacy components

--- a/src/components/stable/gux-text-label/example.html
+++ b/src/components/stable/gux-text-label/example.html
@@ -1,8 +1,14 @@
+<h1>Label above</h1>
 <gux-text-label lang="en">
   <div slot="label">Test Item</div>
-  <gux-text-field-legacy></gux-text-field-legacy>
+  <gux-input-text-like>
+    <input slot="input" type="text" />
+  </gux-input-text-like>
 </gux-text-label>
 
+<h1>Label beside</h1>
 <gux-text-label lang="en" label="Test Item" position="beside">
-  <gux-text-field-legacy></gux-text-field-legacy>
+  <gux-input-text-like>
+    <input slot="input" type="text" />
+  </gux-input-text-like>
 </gux-text-label>
