fix(gux-input-checkbox): fixed indeterminate state

--- a/src/components/legacy/gux-checkbox-legacy/example.html
+++ b/src/components/legacy/gux-checkbox-legacy/example.html
@@ -30,7 +30,6 @@
       id="hamburger"
       name="food"
       value="hamburger"
-      indeterminate
     />
     <label slot="label" for="hamburger">Hamburger</label>
   </gux-form-field>
@@ -45,4 +44,14 @@
     />
     <label slot="label" for="sandwich">Sandwich</label>
   </gux-form-field>
+
+  <style
+    onload="(function () {
+      document.getElementById('hamburger').indeterminate = true;
+    })()"
+  >
+    .not-used {
+      -custom-noop: noop;
+    }
+  </style>
 </div>
