--- a/src/components/stable/gux-form-field/components/gux-input-checkbox/gux-input-checkbox.less
+++ b/src/components/stable/gux-form-field/components/gux-input-checkbox/gux-input-checkbox.less
@@ -3,10 +3,10 @@
 @gux-icon-checkbox-unchecked: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500'%3E%3Cpath fill='%2398a7b8' d='M416 32v352h-352v-352h352zM448 416v-416h-416v416h416z' /%3E%3C/svg%3E");
 @gux-icon-checkbox-unchecked-hover: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500'%3E%3Cpath fill='%232a60c8' d='M416 32v352h-352v-352h352zM448 416v-416h-416v416h416z' /%3E%3C/svg%3E");
 @gux-icon-checkbox-checked: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500'%3E%3Cpath fill='%232a60c8' d='M144 272l96 -64l224 224l32 -32l-256 -320l-128 160zM416 228l32 40v-268h-416v416h353l-32 -32h-289v-352h352v196z' /%3E%3C/svg%3E");
-@gux-icon-checkbox-mixed: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500'%3E%3Cpath fill='%232a60c8' d='M128 192v32h224v-32h-224zM416 32v352h-352v-352h352zM448 416v-416h-416v416h416z' /%3E%3C/svg%3E");
+@gux-icon-checkbox-indeterminate: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500'%3E%3Cpath fill='%232a60c8' d='M128 192v32h224v-32h-224zM416 32v352h-352v-352h352zM448 416v-416h-416v416h416z' /%3E%3C/svg%3E");
 
 @gux-icon-checkbox-checked-dark: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500'%3E%3Cpath fill='%2375a8ff' d='M144 272l96 -64l224 224l32 -32l-256 -320l-128 160zM416 228l32 40v-268h-416v416h353l-32 -32h-289v-352h352v196z' /%3E%3C/svg%3E");
-@gux-icon-checkbox-mixed-dark: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500'%3E%3Cpath fill='%2375a8ff' d='M128 192v32h224v-32h-224zM416 32v352h-352v-352h352zM448 416v-416h-416v416h416z' /%3E%3C/svg%3E");
+@gux-icon-checkbox-indeterminate-dark: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500'%3E%3Cpath fill='%2375a8ff' d='M128 192v32h224v-32h-224zM416 32v352h-352v-352h352zM448 416v-416h-416v416h416z' /%3E%3C/svg%3E");
 @gux-icon-checkbox-unchecked-hover-dark: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 500 500'%3E%3Cpath fill='%2375a8ff' d='M416 32v352h-352v-352h352zM448 416v-416h-416v416h416z' /%3E%3C/svg%3E");
 
 gux-input-checkbox {
@@ -64,7 +64,7 @@ gux-input-checkbox {
     background-image: @gux-icon-checkbox-unchecked;
   }
 
-  input:not(:disabled) ~ label.gux-unchecked:hover::after {
+  input:not(:disabled):not(:indeterminate) ~ label.gux-unchecked:hover::after {
     background-image: @gux-icon-checkbox-unchecked-hover;
   }
 
@@ -80,8 +80,8 @@ gux-input-checkbox {
     background-image: @gux-icon-checkbox-checked;
   }
 
-  label.gux-mixed::after {
-    background-image: @gux-icon-checkbox-mixed;
+  input:indeterminate ~ label::after {
+    background-image: @gux-icon-checkbox-indeterminate;
   }
 }
 
@@ -92,12 +92,12 @@ gux-input-checkbox {
     background-image: @gux-icon-checkbox-checked-dark;
   }
 
-  label.gux-mixed::after {
-    background-image: @gux-icon-checkbox-mixed-dark;
+  input:not(:disabled):not(:indeterminate) ~ label.gux-unchecked:hover::after {
+    background-image: @gux-icon-checkbox-unchecked-hover-dark;
   }
 
-  input:not(:disabled) ~ label.gux-unchecked:hover::after {
-    background-image: @gux-icon-checkbox-unchecked-hover-dark;
+  input:indeterminate ~ label::after {
+    background-image: @gux-icon-checkbox-indeterminate-dark;
   }
 }
 
