fix(gux-input-number): css improvments to match old spin button component

--- a/src/components/stable/gux-form-field/components/gux-input-number/gux-input-number.less
+++ b/src/components/stable/gux-form-field/components/gux-input-number/gux-input-number.less
@@ -41,6 +41,7 @@ gux-input-number {
       align-self: auto;
 
       input {
+        text-align: right;
         border: none;
         outline: none;
         order: 0;
@@ -111,7 +112,7 @@ gux-input-number {
         border: none;
         background: transparent;
         cursor: pointer;
-        color: @gux-black-90;
+        color: @gux-black-50;
 
         &:focus,
         &:hover {
@@ -119,8 +120,8 @@ gux-input-number {
         }
 
         gux-icon {
-          width: 10px;
-          height: 10px;
+          width: 12px;
+          height: 12px;
         }
       }
     }
