feat(dismiss-button): created dismiss button component
created dismiss button component to be used in other components

COMUI-546

--- a/src/components/stable/gux-popover/example.html
+++ b/src/components/stable/gux-popover/example.html
@@ -1,7 +1,12 @@
 <div class="scroll-container">
   <div class="scroll-interior">
     <div id="popover-target">Example Element</div>
-    <gux-popover id="popover-example" position="top" for="popover-target">
+    <gux-popover
+      id="popover-example"
+      position="top"
+      for="popover-target"
+      display-dismiss-button="true"
+    >
       <div>popover content</div>
     </gux-popover>
   </div>
